--- a/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
@@ -1,6 +1,6 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
-\chapter{Exploration de différentes pénalisations sur la fonction coût utilsée pour optimiser les niveaux de gris. }
+\chapter{Exploration de différentes pénalisations sur la fonction coût utilsée pour optimiser les niveaux de gris. \label{chap:anx_penalisation} }
 %\mylettrine{B}{labla}
 
 \section{Régularisation de Moreau-Yosida}
