--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -1,6 +1,6 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
-%%\chapter{Tableaux et graphiques complémentaires}
+%%\chapter{Tableaux et graphiques complémentaires \label{chap:nax_img_complement}}
 \newpage
 ========= DEBUT ANNEXE TABLEAUX ET GRAPHIQUES =====
 
