--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -83,7 +83,7 @@
 
 \theoremstyle{definition}
 \newtheorem{thm}{Théorème}[section]
-\newtheorem{dfn}[thm]{Definition}
+\newtheorem{dfn}[thm]{Définition}
 \newtheorem{prop}[thm]{Propriété}
 \newtheorem{lemme}[thm]{Lemme}
 \newtheorem{coro}[thm]{Corollaire}
