Ajout demo integrale gaussienne =1

--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -143,6 +143,9 @@
 \newcommand{\cf}{{\it cf.}\xspace}
 \newcommand{\etal}{{\it et al.}\xspace}
 \newcommand{\dx}{\;{\rm d}x\xspace}
+\newcommand{\dy}{\;{\rm d}y\xspace}
+\newcommand{\dt}{\;{\rm d}t\xspace}
+\newcommand{\du}{\;{\rm d}u\xspace}
 \newcommand{\vol}{\mathcal{V}}
 \newcommand{\aire}{\mathcal{A}}
 \newcommand{\intperso}[1]{\!\!\int\limits_{#1}\!\!\!}
