--- a/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
@@ -22,13 +22,45 @@ Une gaussienne étant toujours positive (car l'exponentielle l'est toujours), la
 
 \begin{prop}
 \label{prop:integ1}
-La gaussienne $g$ définie ci-dessus est normalisée \ie
+La gaussienne $f$ définie ci-dessus par~\eqref{eq:anxe_gaussienne} est normalisée \ie
 \begin{equation}
 \label{eq:anxe_integ_gauss}
-\int\limits_{-\infty}^{+\infty} f(x) \dx = 1
+\int\limits_{-\infty}^{+\infty} f(x) \dx = 1.
 \end{equation}
-\todo[noline]{demo integ = 1}
 \end{prop}
+\begin{proof} Cette preuve est divisée en deux étapes.
+%%Posons $y=\frac{x-c}{\sigma\sqrt{2}}$ et 
+\paragraph{Etape 1 :} 
+Montrons dans un premier temps que la fonction $h$ définie par $h(x):=e^{-x^2}$, vérifie $\int\limits_{-\infty}^{+\infty} h(x) \dx=\sqrt{\pi}$. Considérons la fonction~:
+\vspace{-3mm}
+$$ k(x):=\int\limits_0^x e^{-u^2} \du. $$
+\vspace{-6mm}
+\begin{flalign*}
+\textrm{On a alors~:}  \qquad \big( k^2(x) \big)' &= 2k(x)k'(x) = 2 e^{-x^2} \int\limits_0^x e^{-u^2} \du &\\
+& \overset{u=tx}{=} 2 e^{-x^2} \int\limits_0^1 e^{-(tx)^2} x \dt = \int\limits_0^1 2xe^{-x^2(1+t^2)} \dt. &
+\end{flalign*}
+En primitivant, on obtient grâce au théorème de Fubini qui nous permet d'intervertir les intégrales~:
+$$k^2(x)= \int\limits_0^x \int\limits_0^1 2xe^{-x^2(1+t^2)} \dt \dx =  \int\limits_0^1 \int\limits_0^x 2xe^{-x^2(1+t^2)} \dx \dt =  \int\limits_0^1 \frac{-e^{-x^2(1+t^2)}}{1+t^2} \dt. $$
+La fonction $t\mapsto  \frac{-e^{-x^2(1+t^2)}}{1+t^2} $ est en valeur absolue bornée par $t\mapsto \frac{1}{1+t^2} $ qui est intégrable. Le théorème de convergence dominée de Lebesgue nous donne ainsi~:
+\vspace{-5mm}
+\begin{align*}
+\lim_{x\to +\infty} k^2(x) & = \lim_{x\to +\infty} \int\limits_0^1 \frac{-e^{-x^2(1+t^2)}}{1+t^2} \dt = \int\limits_0^1 \lim_{x\to +\infty}  \frac{-e^{-x^2(1+t^2)}}{1+t^2} \dt \\
+& = \int\limits_0^1  \frac{1}{1+t^2} \dt = [\arctan t]_0^1 = \frac{\pi}{4}.
+\end{align*}
+\vspace{-5mm}
+\begin{flalign*}
+\textrm{Ainsi :}& \qquad \lim_{x\to +\infty} k(x) = \int\limits_0^{+\infty} h(u) \du = \int\limits_{0}^{+\infty} e^{-u^2}\du  = \sqrt{\pi}/2.& %%% derniere colonne requise pour que l'alignement a gauche prenne effet
+\end{flalign*}
+La fonction $h$ étant paire, on a~:
+$$ \int\limits_{-\infty}^{+\infty} h(u) \du = 2 \int\limits_0^{+\infty} h(u) \du = \sqrt{\pi}. $$
+\paragraph{Etape 2 :} Le résultat de l'étape~1 nous permet de conclure  en effectuant le changement de variable $x=\frac{u-c}{\sigma \sqrt{2}}$~:
+\begin{equation*}
+ \int\limits_{-\infty}^{+\infty} \frac{1}{\sigma\sqrt{2\pi}} e^{-\frac{1}{2}\left(\frac{u-c}{\sigma}\right)^2} \du
+= \frac{1}{\sqrt{\pi}} \int\limits_{-\infty}^{+\infty} e^{-\left(\frac{u-c}{\sigma \sqrt{2}}\right)^2} \frac{\du}{\sigma\sqrt{2}} =\frac{1}{\sqrt{\pi}} \int\limits_{-\infty}^{+\infty} e^{-x^2} \dx = 1.
+\end{equation*}
+\end{proof}
+\todo{ref autre preuve}
+
 
 
 \section{Comment s'intersectent deux gaussiennes ?}
