--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -146,6 +146,7 @@
 \newcommand{\dy}{\;{\rm d}y\xspace}
 \newcommand{\dt}{\;{\rm d}t\xspace}
 \newcommand{\du}{\;{\rm d}u\xspace}
+\newcommand{\dv}{\;{\rm d}v\xspace}
 \newcommand{\vol}{\mathcal{V}}
 \newcommand{\aire}{\mathcal{A}}
 \newcommand{\intperso}[1]{\!\!\int\limits_{#1}\!\!\!}
